--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "axios": "^1.13.2",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "tesseract.js": "^5.1.0"
   }
 }
